refactor(mvux): Added Id to Pagination Cursor

--- a/UI/MvuxHowTos/PaginationPeopleApp/PaginationPeopleApp/MainPage.xaml
+++ b/UI/MvuxHowTos/PaginationPeopleApp/PaginationPeopleApp/MainPage.xaml
@@ -8,6 +8,7 @@
     <Page.Resources>
         <DataTemplate x:Key="PersonDataTemplate" x:DataType="local:Person">
             <StackPanel Orientation="Horizontal" Spacing="2">
+                <TextBlock Text="{x:Bind Id}"/>
                 <TextBlock Text="{x:Bind FirstName}"/>
                 <TextBlock Text="{x:Bind LastName}"/>
             </StackPanel>
