refactor(mvux): Address pagination comments

--- a/UI/MvuxHowTos/PaginationPeopleApp/PaginationPeopleApp/MainPage.xaml
+++ b/UI/MvuxHowTos/PaginationPeopleApp/PaginationPeopleApp/MainPage.xaml
@@ -25,7 +25,7 @@
         </Grid.ColumnDefinitions>
 
         <ListView ItemsSource="{Binding PeopleAuto}" ItemTemplate="{StaticResource PersonDataTemplate}"
-                  DataFetchSize="20" Header="Next page auto-loading when on available capacity or scrolled"/>
+                  Header="Next page auto-loading when on available capacity or scrolled"/>
 
         <Border Grid.Column="1" Width="3" Background="DarkGray" />
 
