fix: Get app running again

--- a/reference/Commerce/Commerce.UI/Views/ProductControl.xaml
+++ b/reference/Commerce/Commerce.UI/Views/ProductControl.xaml
@@ -61,7 +61,8 @@
 								<utu:AutoLayout Padding="16,16,16,16">
 									<Image Source="{Binding Photo}"
 										   Stretch="Uniform"
-										   utu:AutoLayout.PrimaryLength="379" />
+										   MaxHeight="300"/>
+									<!--utu:AutoLayout.PrimaryLength="379" />-->
 								</utu:AutoLayout>
 								<utu:AutoLayout Padding="16,16,16,16">
 									<utu:AutoLayout Justify="SpaceBetween"
