--- a/UI/TravelUI/TravelUI/TravelUI.Shared/MainPage.xaml
+++ b/UI/TravelUI/TravelUI/TravelUI.Shared/MainPage.xaml
@@ -9,7 +9,7 @@
     Background="#f9f9f9">
 
     <!-- Page layout structure -->
-    <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto"
+    <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto"
           ColumnDefinitions="Auto,*,Auto"
           Padding="30,30,0,0">
 
@@ -30,7 +30,11 @@
            <Button Grid.Column="2" Grid.Row="0"  Grid.RowSpan="2" Background="White" Height="50" Width="50" CornerRadius="25" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,30,0">
                 <Image Source="bell"/>
            </Button> 
- 
+
+            <!--Search any location -->
+            <AutoSuggestBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" PlaceholderText="Place any location" QueryIcon="Find" Margin="0,20,30,0"/>
+        
+        
             <!-- Destination type-->
            <ListView Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" ItemsSource="{x:Bind destinationType}" SelectionMode="None" Padding="0,20">
                 <ListView.ItemsPanel>
