Updated NuGet Packages

--- a/UI/UnoChatGPT/UnoChatGPT/UnoChatGPT/Presentation/MainPage.xaml
+++ b/UI/UnoChatGPT/UnoChatGPT/UnoChatGPT/Presentation/MainPage.xaml
@@ -24,7 +24,7 @@
 						 AcceptsReturn="True"
 						 IsSpellCheckEnabled="True"
 						 SelectionHighlightColor="Green"
-						 MinWidth="500"
+						 HorizontalAlignment="Stretch"
 						 PlaceholderText="Insert your text prompt here" />
 
 				<Button x:Name="textCompletionButton"
