fix(skia): Restore SKSwapChainPanel with skiasharp 2.88.4

--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Shared/MainPage.xaml
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Shared/MainPage.xaml
@@ -20,7 +20,7 @@
             <TextBlock x:Name="currentPositionText" />
         </StackPanel>
         <Grid x:Name="panelGrid" Grid.Row="1">
-            <sk:SKXamlCanvas
+            <sk:SKSwapChainPanel
 				x:Name="swapChain"
 				PaintSurface="OnPaintSwapChain"
 				PointerMoved="{x:Bind OnSurfacePointerMoved}"
