--- a/UI/ChatUI/ChatUI/ChatUI/MainPage.xaml
+++ b/UI/ChatUI/ChatUI/ChatUI/MainPage.xaml
@@ -7,10 +7,12 @@
 	xmlns:converters="using:ChatUI.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:ios="http://uno.ui/ios"
-	xmlns:local="using:ChatUI"
+	xmlns:presentation="using:ChatUI.Presentation"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:mvux="using:Uno.Extensions.Reactive.UI"
 	xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:xamarin="http://uno.ui/xamarin"
+	x:Name="MessageView"
 	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
 	mc:Ignorable="d ios android xamarin">
 
@@ -58,11 +60,6 @@
 										ContentTemplate="{TemplateBinding ContentTemplate}"
 										ContentTransitions="{TemplateBinding ContentTransitions}" />
 								</Grid>
-								<!--
-									The 'Xg' text simulates the amount of space one line of text will occupy.
-									In the DataPlaceholder state, the Content is not loaded yet so we
-									approximate the size of the item using placeholder text.
-								-->
 								<TextBlock
 									x:Name="PlaceholderTextBlock"
 									Margin="{TemplateBinding Padding}"
@@ -317,8 +314,8 @@
 				</Setter>
 			</Style>
 
-			<local:MessageTemplateSelector x:Key="MessageTemplateSelector">
-				<local:MessageTemplateSelector.MyMessageTemplate>
+			<presentation:MessageTemplateSelector x:Key="MessageTemplateSelector">
+				<presentation:MessageTemplateSelector.MyMessageTemplate>
 					<DataTemplate>
 						<StackPanel Margin="20,15,0,0">
 							<Border
@@ -352,8 +349,8 @@
 								Visibility="{Binding IsLastInSequence, Converter={StaticResource BooleanToVisibility}}" />
 						</StackPanel>
 					</DataTemplate>
-				</local:MessageTemplateSelector.MyMessageTemplate>
-				<local:MessageTemplateSelector.OtherMessageTemplate>
+				</presentation:MessageTemplateSelector.MyMessageTemplate>
+				<presentation:MessageTemplateSelector.OtherMessageTemplate>
 					<DataTemplate>
 						<StackPanel Margin="0,15,20,0">
 							<Border
@@ -387,41 +384,63 @@
 								Visibility="{Binding IsLastInSequence, Converter={StaticResource BooleanToVisibility}}" />
 						</StackPanel>
 					</DataTemplate>
-				</local:MessageTemplateSelector.OtherMessageTemplate>
-			</local:MessageTemplateSelector>
+				</presentation:MessageTemplateSelector.OtherMessageTemplate>
+			</presentation:MessageTemplateSelector>
 		</ResourceDictionary>
 	</Page.Resources>
-	
-	<ScrollViewer x:Name="scrollViewer"
-				  behaviors:ScrollToBottomBehavior.IsAttached="{Binding IsMessageSent}">
-		<Grid>
-			<Grid.RowDefinitions>
-				<RowDefinition Height="*" />
-				<RowDefinition Height="Auto" />
-			</Grid.RowDefinitions>
-			<ListView Grid.Row="0"
-					  ItemTemplateSelector="{StaticResource MessageTemplateSelector}"
-					  ItemsSource="{Binding Messages}" />
-			<Grid Grid.Row="1"
-				  HorizontalAlignment="Stretch"
-				  VerticalAlignment="Bottom">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="*" />
-					<ColumnDefinition Width="Auto" />
-				</Grid.ColumnDefinitions>
-				<TextBox x:Name="MessageTextBox"
-						 Grid.Column="0"
-						 Margin="10,0,0,10"
-						 HorizontalAlignment="Stretch"
-						 behaviors:CommandOnKeyPressBehavior.TextBoxCommand="{Binding AddMessage}"
-						 Text="{Binding CurrentMessage, Mode=TwoWay}" />
-				<Button x:Name="SendButton"
-						Grid.Column="1"
-						Margin="10,0,10,10"
-						Command="{Binding AddMessage}"
-						CommandParameter="{Binding CurrentMessage}"
-						Content="Send" />
-			</Grid>
+
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<mvux:FeedView Source="{Binding Messages}"
+					   Grid.Row="0">
+			<mvux:FeedView.ValueTemplate>
+				<DataTemplate>
+					<ListView behaviors:ReversedPointerWheelBehavior.IsReversed="True"
+							  ItemTemplateSelector="{StaticResource MessageTemplateSelector}"
+							  ItemsSource="{Binding Data}" />
+				</DataTemplate>
+			</mvux:FeedView.ValueTemplate>
+			<mvux:FeedView.ProgressTemplate>
+				<DataTemplate>
+					<ProgressRing />
+				</DataTemplate>
+			</mvux:FeedView.ProgressTemplate>
+			<mvux:FeedView.ErrorTemplate>
+				<DataTemplate>
+					<TextBlock Text="An error has occurred retrieving messages" />
+				</DataTemplate>
+			</mvux:FeedView.ErrorTemplate>
+			<mvux:FeedView.NoneTemplate>
+				<DataTemplate>
+					<TextBlock Text="No Results" />
+				</DataTemplate>
+			</mvux:FeedView.NoneTemplate>
+		</mvux:FeedView>
+		<Grid
+			Grid.Row="1"
+			HorizontalAlignment="Stretch"
+			VerticalAlignment="Bottom"
+			DataContext="{Binding NewMessage}">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="Auto" />
+			</Grid.ColumnDefinitions>
+			<TextBox
+				x:Name="MessageTextBox"
+				Grid.Column="0"
+				Margin="10,0,0,10"
+				HorizontalAlignment="Stretch"
+				behaviors:CommandOnKeyPressBehavior.TextBoxCommand="{Binding DataContext.AddMessage, ElementName=MessageView}"
+				Text="{Binding Text, Mode=TwoWay}" />
+			<Button
+				x:Name="SendButton"
+				Grid.Column="1"
+				Margin="10,0,10,10"
+				Command="{Binding DataContext.AddMessage, ElementName=MessageView}"
+				Content="Send" />
 		</Grid>
-	</ScrollViewer>
+	</Grid>
 </Page>
