chore(deps): Updating references

--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Shared/MainPage.xaml
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Shared/MainPage.xaml
@@ -61,7 +61,7 @@
                 <ColumnDefinition Width="0.4*"/>
             </Grid.ColumnDefinitions>
             <winui:AnimatedVisualPlayer Grid.Column="1" Grid.Row="1">
-                <lottie:LottieVisualSource UriSource="ms-appx:///Animations/chat.json" />
+                <lottie:LottieVisualSource UriSource="ms-appx:///chat.json" />
             </winui:AnimatedVisualPlayer>
             <Button Grid.Row="3" Grid.Column="1" Command="{Binding Connect}" Content="Connect" Margin="4" Padding="16,4" HorizontalAlignment="Center"/>
             <TextBox Grid.Row="2" Grid.Column="1" PlaceholderText="Name" Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="4"/>
@@ -88,7 +88,7 @@
                 <ColumnDefinition Width="0.3*"/>
             </Grid.ColumnDefinitions>
             <winui:AnimatedVisualPlayer Grid.Column="1" Margin="16" Grid.Row="1">
-                <lottie:LottieVisualSource UriSource="ms-appx:///Animations/connecting.json" />
+                <lottie:LottieVisualSource UriSource="ms-appx:///connecting.json" />
             </winui:AnimatedVisualPlayer>
             <TextBlock Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" Style="{StaticResource SubheaderTextBlockStyle}" Text="Connecting..." Margin="4"/>
         </Grid>
