--- a/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex/Presentation/MainPage.xaml
+++ b/UI/UnoZIndex/UnoZIndex/UnoZIndex/UnoZIndex/Presentation/MainPage.xaml
@@ -26,8 +26,9 @@
 								  CornerRadius="5"
 								  Width="300"
 								  Height="200"
-								  Elevation="10"
-								  ShadowColor="WhiteSmoke"
+								  Elevation="2"
+								  ShadowColor="DarkGray"
+								  IsTapEnabled="True"
 								  Tapped="ElevatedView_Tapped">
 				<Grid RowSpacing="5"
 					  Background="#1f1f1f">
@@ -60,8 +61,9 @@
 								  CornerRadius="5"
 								  Width="300"
 								  Height="200"
-								  Elevation="10"
-								  ShadowColor="WhiteSmoke"
+								  Elevation="2"
+								  ShadowColor="DarkGray"
+								  IsTapEnabled="True"
 								  Tapped="ElevatedView_Tapped">
 				<Grid RowSpacing="5"
 					  Background="#1f1f1f">
@@ -93,8 +95,9 @@
 								  CornerRadius="5"
 								  Width="300"
 								  Height="200"
-								  Elevation="10"
-								  ShadowColor="WhiteSmoke"
+								  Elevation="2"
+								  ShadowColor="DarkGray"
+								  IsTapEnabled="True"
 								  Tapped="ElevatedView_Tapped">
 				<Grid RowSpacing="5"
 					  Background="#1f1f1f">
@@ -127,7 +130,8 @@
 								  Width="300"
 								  Height="200"
 								  Elevation="5"
-								  ShadowColor="WhiteSmoke"
+								  ShadowColor="DarkGray"
+								  IsTapEnabled="True"
 								  Tapped="ElevatedView_Tapped">
 				<Grid RowSpacing="5"
 					  Background="#1f1f1f">
