fix: comment broken code and disable wasm and mobile builds

--- a/UI/UnoContoso/UnoContoso.Shared/Views/HomeView.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Views/HomeView.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:i="using:Microsoft.Xaml.Interactivity" 
     xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
-    xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:toolkit="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:prismMvvm="using:Prism.Mvvm"
     prismMvvm:ViewModelLocator.AutowireViewModel="True"
     xmlns:stateTriggers="using:UnoContoso.StateTriggers"
