--- a/UI/UnoContoso/UnoContoso.Shared/App.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/App.xaml
@@ -1,5 +1,5 @@
 <prismIoc:PrismApplication
-    xmlns:prismIoc="using:Prism.DryIoc.Uno.WinUI"
+    xmlns:prismIoc="using:Prism.DryIoc"
     x:Class="UnoContoso.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
