--- a/UI/UnoContoso/UnoContoso.Shared/Styles/_DataGrid.xaml
+++ b/UI/UnoContoso/UnoContoso.Shared/Styles/_DataGrid.xaml
@@ -12,8 +12,8 @@
 
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls"
-                    xmlns:localprimitives="using:Microsoft.Toolkit.Uwp.UI.Controls.Primitives"
+                    xmlns:local="using:CommunityToolkit.WinUI.UI.Controls"
+                    xmlns:localprimitives="using:CommunityToolkit.WinUI.UI.Controls.Primitives"
                     xmlns:contract6Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,6)"
                     xmlns:contract6NotPresent="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,6)">
 
