--- a/UI/ChatUI/ChatUI/ChatUI/MainPage.xaml
+++ b/UI/ChatUI/ChatUI/ChatUI/MainPage.xaml
@@ -4,12 +4,11 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:android="http://uno.ui/android"
 	xmlns:behaviors="using:ChatUI.Behaviors"
-	xmlns:converters="using:ChatUI.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:ios="http://uno.ui/ios"
-	xmlns:presentation="using:ChatUI.Presentation"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:mvux="using:Uno.Extensions.Reactive.UI"
+	xmlns:presentation="using:ChatUI.Presentation"
 	xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:xamarin="http://uno.ui/xamarin"
 	x:Name="MessageView"
@@ -18,10 +17,10 @@
 
 	<Page.Resources>
 		<ResourceDictionary>
-			<converters:FromNullableBoolToVisibilityConverter x:Key="BooleanToVisibility" VisibilityIfTrue="Visible" />
-
 			<Style TargetType="ListView">
 				<Setter Property="RenderTransformOrigin" Value=".5,.5" />
+				<Setter Property="behaviors:ReversedPointerWheel.IsEnabled" Value="True" />
+				<!--  Needed to prevent the chat UI to be rendered upside-down  -->
 				<Setter Property="RenderTransform">
 					<Setter.Value>
 						<ScaleTransform ScaleY="-1" />
@@ -134,71 +133,6 @@
 											</Storyboard>
 										</VisualState>
 									</VisualStateGroup>
-									<VisualStateGroup x:Name="MultiSelectStates">
-										<VisualState x:Name="MultiSelectDisabled">
-											<Storyboard>
-												<DoubleAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectCheckBoxTransform" Storyboard.TargetProperty="X">
-													<EasingDoubleKeyFrame KeyTime="0:0:0" Value="0" />
-													<SplineDoubleKeyFrame
-														KeySpline="0.1,0.9,0.2,1"
-														KeyTime="0:0:0.333"
-														Value="-32" />
-												</DoubleAnimationUsingKeyFrames>
-												<win:DoubleAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectClipTransform" Storyboard.TargetProperty="X">
-													<EasingDoubleKeyFrame KeyTime="0:0:0" Value="0" />
-													<SplineDoubleKeyFrame
-														KeySpline="0.1,0.9,0.2,1"
-														KeyTime="0:0:0.333"
-														Value="32" />
-												</win:DoubleAnimationUsingKeyFrames>
-												<DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenterTranslateTransform" Storyboard.TargetProperty="X">
-													<EasingDoubleKeyFrame KeyTime="0:0:0" Value="32" />
-													<SplineDoubleKeyFrame
-														KeySpline="0.1,0.9,0.2,1"
-														KeyTime="0:0:0.333"
-														Value="0" />
-												</DoubleAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectSquare" Storyboard.TargetProperty="Visibility">
-													<DiscreteObjectKeyFrame KeyTime="0" Value="Visible" />
-													<DiscreteObjectKeyFrame KeyTime="0:0:0.333" Value="Collapsed" />
-												</ObjectAnimationUsingKeyFrames>
-											</Storyboard>
-										</VisualState>
-										<VisualState x:Name="MultiSelectEnabled">
-											<Storyboard>
-												<DoubleAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectCheckBoxTransform" Storyboard.TargetProperty="X">
-													<EasingDoubleKeyFrame KeyTime="0:0:0" Value="-32" />
-													<SplineDoubleKeyFrame
-														KeySpline="0.1,0.9,0.2,1"
-														KeyTime="0:0:0.333"
-														Value="0" />
-												</DoubleAnimationUsingKeyFrames>
-												<win:DoubleAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectClipTransform" Storyboard.TargetProperty="X">
-													<EasingDoubleKeyFrame KeyTime="0:0:0" Value="32" />
-													<SplineDoubleKeyFrame
-														KeySpline="0.1,0.9,0.2,1"
-														KeyTime="0:0:0.333"
-														Value="0" />
-												</win:DoubleAnimationUsingKeyFrames>
-												<DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenterTranslateTransform" Storyboard.TargetProperty="X">
-													<EasingDoubleKeyFrame KeyTime="0:0:0" Value="-32" />
-													<SplineDoubleKeyFrame
-														KeySpline="0.1,0.9,0.2,1"
-														KeyTime="0:0:0.333"
-														Value="0" />
-												</DoubleAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectSquare" Storyboard.TargetProperty="Visibility">
-													<DiscreteObjectKeyFrame KeyTime="0" Value="Visible" />
-												</ObjectAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="MultiSelectCheck" Storyboard.TargetProperty="Visibility">
-													<DiscreteObjectKeyFrame KeyTime="0" Value="Visible" />
-												</ObjectAnimationUsingKeyFrames>
-												<ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenterGrid" Storyboard.TargetProperty="Margin">
-													<DiscreteObjectKeyFrame KeyTime="0" Value="32,0,0,0" />
-												</ObjectAnimationUsingKeyFrames>
-											</Storyboard>
-										</VisualState>
-									</VisualStateGroup>
 									<VisualStateGroup x:Name="DataVirtualizationStates">
 										<VisualState x:Name="DataAvailable" />
 										<VisualState x:Name="DataPlaceholder">
@@ -211,101 +145,6 @@
 												</ObjectAnimationUsingKeyFrames>
 											</Storyboard>
 										</VisualState>
-									</VisualStateGroup>
-									<VisualStateGroup x:Name="ReorderHintStates">
-										<VisualState x:Name="NoReorderHint" />
-										<VisualState x:Name="BottomReorderHint">
-											<Storyboard>
-												<win:DragOverThemeAnimation
-													Direction="Bottom"
-													ToOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
-													TargetName="ContentBorder" />
-											</Storyboard>
-										</VisualState>
-										<VisualState x:Name="TopReorderHint">
-											<Storyboard>
-												<win:DragOverThemeAnimation
-													Direction="Top"
-													ToOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
-													TargetName="ContentBorder" />
-											</Storyboard>
-										</VisualState>
-										<VisualState x:Name="RightReorderHint">
-											<Storyboard>
-												<win:DragOverThemeAnimation
-													Direction="Right"
-													ToOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
-													TargetName="ContentBorder" />
-											</Storyboard>
-										</VisualState>
-										<VisualState x:Name="LeftReorderHint">
-											<Storyboard>
-												<win:DragOverThemeAnimation
-													Direction="Left"
-													ToOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
-													TargetName="ContentBorder" />
-											</Storyboard>
-										</VisualState>
-										<VisualStateGroup.Transitions>
-											<VisualTransition GeneratedDuration="0:0:0.2" To="NoReorderHint" />
-										</VisualStateGroup.Transitions>
-									</VisualStateGroup>
-									<VisualStateGroup x:Name="DragStates">
-										<VisualState x:Name="NotDragging" />
-										<VisualState x:Name="Dragging">
-											<Storyboard>
-												<DoubleAnimation
-													Storyboard.TargetName="ContentBorder"
-													Storyboard.TargetProperty="Opacity"
-													To="{ThemeResource ListViewItemDragThemeOpacity}"
-													Duration="0" />
-												<win:DragItemThemeAnimation TargetName="ContentBorder" />
-											</Storyboard>
-										</VisualState>
-										<VisualState x:Name="DraggingTarget">
-											<Storyboard>
-												<win:DropTargetItemThemeAnimation TargetName="ContentBorder" />
-											</Storyboard>
-										</VisualState>
-										<VisualState x:Name="MultipleDraggingPrimary">
-											<Storyboard>
-												<!--
-													These two Opacity animations are required - the FadeInThemeAnimations
-													on the same elements animate an internal Opacity.
-												-->
-												<DoubleAnimation
-													Storyboard.TargetName="MultiArrangeOverlayBackground"
-													Storyboard.TargetProperty="Opacity"
-													To="1"
-													Duration="0" />
-												<DoubleAnimation
-													Storyboard.TargetName="MultiArrangeOverlayText"
-													Storyboard.TargetProperty="Opacity"
-													To="1"
-													Duration="0" />
-												<DoubleAnimation
-													Storyboard.TargetName="ContentBorder"
-													Storyboard.TargetProperty="Opacity"
-													To="{ThemeResource ListViewItemDragThemeOpacity}"
-													Duration="0" />
-												<win:FadeInThemeAnimation TargetName="MultiArrangeOverlayBackground" />
-												<win:FadeInThemeAnimation TargetName="MultiArrangeOverlayText" />
-												<win:DragItemThemeAnimation TargetName="ContentBorder" />
-											</Storyboard>
-										</VisualState>
-										<VisualState x:Name="MultipleDraggingSecondary">
-											<Storyboard>
-												<win:FadeOutThemeAnimation TargetName="ContentBorder" />
-											</Storyboard>
-										</VisualState>
-										<VisualState x:Name="DraggedPlaceholder">
-											<Storyboard>
-												<win:FadeOutThemeAnimation TargetName="ContentBorder" />
-											</Storyboard>
-										</VisualState>
-										<VisualStateGroup.Transitions>
-											<VisualTransition GeneratedDuration="0:0:0.2" To="NotDragging" />
-										</VisualStateGroup.Transitions>
 									</VisualStateGroup>
 								</VisualStateManager.VisualStateGroups>
 							</Grid>
@@ -345,8 +184,7 @@
 								Margin="0,0,10,0"
 								HorizontalAlignment="Right"
 								Fill="DeepPink"
-								Points="0,0 10,0 10,10"
-								Visibility="{Binding IsLastInSequence, Converter={StaticResource BooleanToVisibility}}" />
+								Points="0,0 10,0 10,10" />
 						</StackPanel>
 					</DataTemplate>
 				</presentation:MessageTemplateSelector.MyMessageTemplate>
@@ -380,8 +218,7 @@
 								Margin="10,0,0,0"
 								HorizontalAlignment="Left"
 								Fill="DeepSkyBlue"
-								Points="0,0 10,0 0,10"
-								Visibility="{Binding IsLastInSequence, Converter={StaticResource BooleanToVisibility}}" />
+								Points="0,0 10,0 0,10" />
 						</StackPanel>
 					</DataTemplate>
 				</presentation:MessageTemplateSelector.OtherMessageTemplate>
@@ -394,13 +231,10 @@
 			<RowDefinition Height="*" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
-		<mvux:FeedView Source="{Binding Messages}"
-					   Grid.Row="0">
+		<mvux:FeedView Grid.Row="0" Source="{Binding Messages}">
 			<mvux:FeedView.ValueTemplate>
 				<DataTemplate>
-					<ListView behaviors:ReversedPointerWheelBehavior.IsReversed="True"
-							  ItemTemplateSelector="{StaticResource MessageTemplateSelector}"
-							  ItemsSource="{Binding Data}" />
+					<ListView ItemTemplateSelector="{StaticResource MessageTemplateSelector}" ItemsSource="{Binding Data}" />
 				</DataTemplate>
 			</mvux:FeedView.ValueTemplate>
 			<mvux:FeedView.ProgressTemplate>
