--- a/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.Shared/MainPage.xaml
+++ b/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.Shared/MainPage.xaml
@@ -9,14 +9,17 @@
     >
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-          Margin="50">
-        <StackPanel>
-            <TextBlock Text="This sample demonstrates the use of the AutoSuggestBox Control" Margin="0,0,0,30" FontSize="30" />
+          Margin="20,40">
+        <StackPanel Margin="4">
+            <TextBlock Text="This sample demonstrates the use of the AutoSuggestBox Control" 
+                       Margin="0,0,0,30" 
+                       FontSize="30"
+                       TextWrapping="WrapWholeWords" />
             <AutoSuggestBox x:Name="suggestBox"
-							Header="Type in some text:"
-							TextChanged="OnTextChanged"
-							QuerySubmitted="OnQuerySubmitted"
-							SuggestionChosen="OnSuggestionChosen" />
+		            Header="Type in some text:"
+                            TextChanged="OnTextChanged"
+			    QuerySubmitted="OnQuerySubmitted"
+			    SuggestionChosen="OnSuggestionChosen" />
             <TextBlock x:Name="query" />
         </StackPanel>
     </Grid>
