--- a/UI/Benchmark/AppBenchmark/AppBenchmark.Shared/MainPage.xaml
+++ b/UI/Benchmark/AppBenchmark/AppBenchmark.Shared/MainPage.xaml
@@ -5,10 +5,11 @@
     xmlns:local="using:AppBenchmark"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:utu="using:Uno.Toolkit.UI"
     mc:Ignorable="d"    
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <Grid utu:SafeArea.Insets="Top,Bottom">
         <local:BenchmarkDotNetControl />
     </Grid>
 </Page>
