fix: added safe area at the top for IOS in insertingSeparator sample

--- a/UI/InsertingSeparators/InsertingSeparators.Shared/MainPage.xaml
+++ b/UI/InsertingSeparators/InsertingSeparators.Shared/MainPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:InsertingSeparators"
     xmlns:uno="clr-namespace:Uno.UI.Samples.Controls"
+	xmlns:utu="using:Uno.Toolkit.UI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"    
@@ -18,7 +19,7 @@
         </DataTemplate>
     </Page.Resources>
     
-    <Grid>
+    <Grid utu:SafeArea.Insets="Top">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
