--- a/UI/CardViewMigration/CardViewMigration.Shared/CardViewXamlPage.xaml
+++ b/UI/CardViewMigration/CardViewMigration.Shared/CardViewXamlPage.xaml
@@ -3,13 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:CardViewMigration"
+    xmlns:utu="using:Uno.Toolkit.UI"
     xmlns:controls="using:CardViewMigration.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <Grid utu:SafeArea.Insets="Top">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
