--- a/UI/CardViewMigration/CardViewMigration.Shared/ControlTemplatePage.xaml
+++ b/UI/CardViewMigration/CardViewMigration.Shared/ControlTemplatePage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:CardViewMigration"
+    xmlns:utu="using:Uno.Toolkit.UI"
     xmlns:controls="using:CardViewMigration.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -37,7 +38,9 @@
         </ResourceDictionary>
     </Page.Resources>
 
-    <StackPanel Spacing="20" Padding="20">
+    <StackPanel Spacing="20" 
+                Padding="20"
+                utu:SafeArea.Insets="Top">
         <Button x:Name="BackButton"
                 Click="{x:Bind GoBack}"
                 Style="{StaticResource NavigationBackButtonNormalStyle}"
