--- a/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.Shared/MainPage.xaml
+++ b/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.Shared/MainPage.xaml
@@ -13,10 +13,11 @@
         <StackPanel>
             <TextBlock Text="This sample demonstrates the use of the AutoSuggestBox Control" Margin="0,0,0,30" FontSize="30" />
             <AutoSuggestBox x:Name="suggestBox"
-							Header="Type in some text:"
-							TextChanged="OnTextChanged"
-							QuerySubmitted="OnQuerySubmitted"
-							SuggestionChosen="OnSuggestionChosen" />
+                            Height="60"
+			    Header="Type in some text:"
+			    TextChanged="OnTextChanged"
+			    QuerySubmitted="OnQuerySubmitted"
+			    SuggestionChosen="OnSuggestionChosen" />
             <TextBlock x:Name="query" />
         </StackPanel>
     </Grid>
