--- a/UI/LiteDB/LiteDB/src/LiteDBSample.Shared/MainPage.xaml
+++ b/UI/LiteDB/LiteDB/src/LiteDBSample.Shared/MainPage.xaml
@@ -1,33 +1,30 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:local="using:LiteDBSample" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="LiteDBSample.MainPage" mc:Ignorable="d" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    <StackPanel>
-        <TextBlock Text="LiteDB Sample" Margin="20" FontSize="30" />
+<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:local="using:LiteDBSample" xmlns:utu="using:Uno.Toolkit.UI" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="LiteDBSample.MainPage" mc:Ignorable="d" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	<StackPanel utu:SafeArea.Insets="Top">
+        <TextBlock Text="LiteDB Sample" Margin="20" FontSize="30"/>
         <Grid Margin="20">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="20" />
-                <ColumnDefinition Width="250" />
-                <ColumnDefinition Width="20" />
+                <ColumnDefinition Width="*" MaxWidth="250" />
                 <ColumnDefinition Width="100" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Title:" Margin="0,10,0,0" />
-            <TextBox Grid.Row="0" Grid.Column="2" x:Name="todoText" />
-            <Button Grid.Row="0" Grid.Column="4" Click="AddTodoItem">Add</Button>
+            <TextBlock Grid.Column="0" Text="Title:" Margin="0,10,10,0" />
+            <TextBox Grid.Column="1" x:Name="todoText" Margin="10,0"/>
+            <Button Grid.Column="2" Margin="10,0,0,0" Click="AddTodoItem">Add</Button>
         </Grid>
         <Grid Margin="20">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="20" />
-                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" MaxWidth="180" />
+                <ColumnDefinition Width="*" MaxWidth="200"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <Button Click="LoadFromDatabase" Grid.Row="0" Grid.Column="0">Load from database</Button>
-            <Button Click="DeleteFromDatabase" Grid.Row="0" Grid.Column="2">Delete all from database</Button>
+            <Button Click="LoadFromDatabase" HorizontalAlignment="Stretch" Grid.Column="0" Margin="0,0,10,0">Load from database</Button>
+            <Button Click="DeleteFromDatabase" HorizontalAlignment="Stretch" Grid.Column="1" Margin="10,0,0,0">Delete all from database</Button>
         </Grid>
         <ListView ItemsSource="{x:Bind _todoItems}">
             <ListView.ItemTemplate>
@@ -35,7 +32,7 @@
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="30" />
-                            <ColumnDefinition Width="300" />
+                            <ColumnDefinition Width="*" MaxWidth="300" />
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" Text="{x:Bind Id}" />
                         <TextBlock Grid.Column="1" Text="{x:Bind Text}" />
