fix: MvuxHowTos apps layout

--- a/UI/MvuxHowTos/EditablePeopleApp/EditablePeopleApp/MainPage.xaml
+++ b/UI/MvuxHowTos/EditablePeopleApp/EditablePeopleApp/MainPage.xaml
@@ -3,9 +3,10 @@
     x:Class="EditablePeopleApp.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mvux="using:Uno.Extensions.Reactive.UI">
+    xmlns:mvux="using:Uno.Extensions.Reactive.UI"
+    xmlns:utu="using:Uno.Toolkit.UI">
 
-    <StackPanel>
+    <StackPanel utu:SafeArea.Insets="Bottom,Top">
         <StackPanel Orientation="Horizontal">
 
             <TextBox PlaceholderText="First name" DataContext="{Binding NewPerson}"
