--- a/UI/MvuxHowTos/SelectionPeopleApp/SelectionPeopleApp/MainPage.xaml
+++ b/UI/MvuxHowTos/SelectionPeopleApp/SelectionPeopleApp/MainPage.xaml
@@ -2,9 +2,10 @@
     x:Class="SelectionPeopleApp.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mvux="using:Uno.Extensions.Reactive.UI">
+    xmlns:mvux="using:Uno.Extensions.Reactive.UI"
+    xmlns:utu="using:Uno.Toolkit.UI">
 
-    <Grid>
+    <Grid utu:SafeArea.Insets="Bottom,Top">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
