--- a/UI/MvuxHowTos/PeopleApp/PeopleApp/MainPage.xaml
+++ b/UI/MvuxHowTos/PeopleApp/PeopleApp/MainPage.xaml
@@ -2,27 +2,30 @@
     x:Class="PeopleApp.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mvux="using:Uno.Extensions.Reactive.UI">
+    xmlns:mvux="using:Uno.Extensions.Reactive.UI"
+    xmlns:utu="using:Uno.Toolkit.UI">
 
-    <mvux:FeedView Source="{Binding People}">
-        <DataTemplate>
-            <ListView ItemsSource="{Binding Data}">
+    <Grid utu:SafeArea.Insets="Bottom,Top">
+        <mvux:FeedView Source="{Binding People}">
+            <DataTemplate>
+                <ListView ItemsSource="{Binding Data}">
 
-                <ListView.Header>
+                    <ListView.Header>
                     <Button Content="Refresh" Command="{Binding Refresh}" />
-                </ListView.Header>
+                    </ListView.Header>
 
-                <ListView.ItemTemplate>
-                    <DataTemplate>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
                         <StackPanel Orientation="Horizontal" Spacing="5">
                             <TextBlock Text="{Binding FirstName}"/>
                             <TextBlock Text="{Binding LastName}"/>
-                        </StackPanel>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
 
-            </ListView>
-        </DataTemplate>
-    </mvux:FeedView>
+                </ListView>
+            </DataTemplate>
+        </mvux:FeedView>
+    </Grid>
 
 </Page>
