--- a/UI/MvuxHowTos/WeddingHallApp/WeddingHallApp/MainPage.xaml
+++ b/UI/MvuxHowTos/WeddingHallApp/WeddingHallApp/MainPage.xaml
@@ -1,9 +1,10 @@
 <Page 
     x:Class="WeddingHallApp.MainPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:utu="using:Uno.Toolkit.UI">
 
-    <StackPanel>
+    <StackPanel utu:SafeArea.Insets="Bottom,Top">
         <TextBlock Text="How many people are currently in the hall?" />
         <TextBox 
             DataContext="{Binding HallCrowdedness}"
