--- a/UI/LiteDB/LiteDB/src/LiteDBSample.Shared/App.xaml
+++ b/UI/LiteDB/LiteDB/src/LiteDBSample.Shared/App.xaml
@@ -1,17 +1,16 @@
-﻿<Application
-    x:Class="LiteDBSample.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:LiteDBSample">
-	
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Add resource dictionaries here -->                
-            </ResourceDictionary.MergedDictionaries>
-            <!-- Add resources here -->
-        </ResourceDictionary>
-    </Application.Resources>
+﻿<Application x:Class="LiteDBSample.App"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:local="using:LiteDBSample">
+
+	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+				<!-- Add resource dictionaries here -->
+			</ResourceDictionary.MergedDictionaries>
+			<!-- Add resources here -->
+		</ResourceDictionary>
+	</Application.Resources>
 
 </Application>
