fix: no way to back on platform other than Skia

--- a/UI/NativeFrameNav/NativeFrameNav.Shared/BlankPage1.xaml
+++ b/UI/NativeFrameNav/NativeFrameNav.Shared/BlankPage1.xaml
@@ -17,7 +17,7 @@
 
 		<CommandBar Grid.Row="0" Content="BlankPage1">
 			<CommandBar.PrimaryCommands>
-				<skia:AppBarButton Content="Back" Click="NavigateBack" />
+				<AppBarButton Content="Back" Click="NavigateBack" />
 			</CommandBar.PrimaryCommands>
 		</CommandBar>
 		<StackPanel Grid.Row="1">
