fix: change margin to safearea

--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/MainPage.xaml
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/MainPage.xaml
@@ -12,8 +12,8 @@
 	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<muxc:TabView x:Name="tabView" 
-				  Margin="0,35">
+	<muxc:TabView x:Name="tabView"
+				  utu:SafeArea.Insets="All">
 		<muxc:TabView.TabItems>
 			<muxc:TabViewItem Header="Home">
 				<muxc:TabViewItem.IconSource>
