fix: Updates to latest embedding

--- a/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.MauiControls/EmbeddedControl.xaml
+++ b/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.MauiControls/EmbeddedControl.xaml
@@ -6,7 +6,7 @@
 			 x:Class="GrapeCityApp.MauiControls.EmbeddedControl"
 			 HorizontalOptions="Fill">
 	<VerticalStackLayout>
-		<toolkit:AvatarView HeightRequest="100"
+		<!--<toolkit:AvatarView HeightRequest="100"
 							WidthRequest="100">
 			<toolkit:AvatarView.ImageSource>
 				<toolkit:GravatarImageSource x:Name="Source"
@@ -15,11 +15,11 @@
 											 Email="info@platform.uno"
 											 Image="MonsterId" />
 			</toolkit:AvatarView.ImageSource>
-		</toolkit:AvatarView>
+		</toolkit:AvatarView>-->
 		<Label Text="Embedded MAUI Content"
 			   VerticalOptions="Center"
 			   HorizontalOptions="Center" />
-		<!--<c1:FlexGrid x:Name="grid"
+		<c1:FlexGrid x:Name="grid"
 					 AutoGenerateColumns="False">
 			<c1:FlexGrid.Columns>
 				<c1:GridColumn Binding="FirstName" />
@@ -28,9 +28,9 @@
 				<c1:GridColumn Binding="Country" />
 				<c1:GridColumn Binding="Active" />
 			</c1:FlexGrid.Columns>
-		</c1:FlexGrid>-->
-		<!--<c1:C1Calendar x:Name="calendar"
+		</c1:FlexGrid>
+		<c1:C1Calendar x:Name="calendar"
 					   HeightRequest="300"
-					   WidthRequest="300" />-->
+					   WidthRequest="300" />
 	</VerticalStackLayout>
 </ContentView>
