--- a/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp/MainPage.xaml
+++ b/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp/MainPage.xaml
@@ -14,9 +14,9 @@
 					   Text="Hello Uno Platform"
 					   HorizontalAlignment="Center" />
 			<embed:MauiHost x:Name="MauiHostElement"
-							xmlns:embed="using:Uno.Extensions.Maui">
-				<controls:EmbeddedControl xmlns:controls="using:GrapeCityApp.MauiControls" />
-			</embed:MauiHost>
+							xmlns:embed="using:Uno.Extensions.Maui"
+							xmlns:controls="using:GrapeCityApp.MauiControls"
+							Source="controls:EmbeddedControl" />
 		</StackPanel>
 	</ScrollViewer>
 </Page>
